# noseguy-wayland

./: Bitmaps_copyright.notice  INSTALL.md  README.md  example-phrases.txt  meson.build  meson_options.txt  nose-reduced-fps30.csv  nose-reduced.csv  noseguy_gpu_impact_analysis.md  opis.md
.gitea/workflows/: release.yml
.github/workflows/: release.yml
data/: quotes.h
docs/superpowers/plans/: 2026-04-12-noseguy-wayland.md  2026-04-14-gitea-release-workflow.md
docs/superpowers/specs/: 2026-04-12-noseguy-wayland-design.md  2026-04-14-gitea-release-workflow-design.md
src/: anim.c  anim.h  main.c  noseguy.h  plugin.c  render.c  render.h  text.c  text.h  wayland.c  wayland.h
tests/: test_anim.c  test_text.c
ubuntu-packages/: swaylock-plugin_1.8.6-1_amd64.deb
